--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
   </div>
 </div>
 
+<footer class="outro">
+  <h2>Conclusion</h2>
+  <p>Ces graphiques montrent l'urgence de mettre en place 
+  des politiques de santé publique adaptées dans les zones les plus touchées.</p>
+</footer>
+
 <script>
 document.addEventListener('DOMContentLoaded', () => {
   const steps = document.querySelectorAll('.step');
