--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: black;
+    
   }
 
   .step {
@@ -90,7 +92,7 @@
     padding: 2rem;
     box-sizing: border-box;
     text-align: center;
-    color: white;
+    color: black;
     opacity: 0.6;
     transition: opacity 0.3s ease, transform 0.3s ease;
   }
