--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Scrollytelling - Maps Flourish</title>
+<title>Scrollytelling</title>
 <style>
 
   html, body {
@@ -115,10 +115,8 @@
 <body>
 
 <header class="intro">
-  <h1>Air Pollution in Africa</h1>
-  <p>Cette page explore trois dimensions de la pollution en Afrique : 
-  exposition, pollution domestique et pollution ambiante. 
-  Faites défiler pour voir les graphiques changer.</p>
+  <h1>Breathing in Life or Death; A look at Africa's Air Quality</h1>
+  <p></p>
 </header>
 
 <div class="visuals">
@@ -144,8 +142,7 @@
 
 <footer class="outro">
   <h2>Conclusion</h2>
-  <p>Ces graphiques montrent l'urgence de mettre en place 
-  des politiques de santé publique adaptées dans les zones les plus touchées.</p>
+  <p></p>
 </footer>
 
 <script>
