--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
   <!-- Section 2 : Image -->
   <section class="image">
-    <img src="https://www.pexels.com/photo/cars-on-the-road-during-sunset-10666664/">
+    <img src="https://images.pexels.com/photos/10666664/pexels-photo-10666664.jpeg?_gl=1*1x3zst5*_ga*NzEzMTM1OTEuMTc1ODEwMzA4MA..*_ga_8JE65Q40S6*czE3NTgxMDMwNzkkbzEkZzAkdDE3NTgxMDMwNzkkajYwJGwwJGgw">
   </section>
 
   <!-- Section 3 : Texte introductif -->
