--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      text-align: center;
+      text-align: left;
       padding: 3rem 1rem;
       box-sizing: border-box;
     }
@@ -28,7 +28,7 @@
     /* ======= Section 1 : Title ======= */
     .hero h1 {
       font-size: 3rem;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0rem;
     }
     .hero h3 {
       font-weight: normal;
