--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Air Pollution in Africa</title>
   <style>
     body {
-      margin: 2;
-      font-family: Poppins, Arial, sans-serif;
+      margin: 20px;
+      font-family: 'Poppins', Arial, sans-serif;
       background: #f5f5f5;
       color: #111;
       overflow-x: hidden;
@@ -27,10 +27,12 @@
 
     /* ======= Section 1 : Title ======= */
     .hero h1 {
+      text-align: left;
       font-size: 3rem;
       margin-bottom: 0rem;
     }
     .hero h3 {
+      text-align: left;
       font-weight: normal;
       color: #555;
       margin-top: 0;
