--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     /* ======= Section containers ======= */
     section {
+      margin: 20px;
       width: 100%;
       display: flex;
       flex-direction: column;
@@ -40,8 +41,9 @@
 
     /* ======= Section 2 : Image ======= */
     .image img {
-      max-width: 50%;
-      height: auto;
+      justify-content: flex-start;
+      max-width: 90%;
+      height: 50%;
       border-radius: 10px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     }
