--- a/index.html
+++ b/index.html
@@ -40,13 +40,19 @@
     }
 
     /* ======= Section 2 : Image ======= */
+      .image {
+    display: flex;
+    justify-content: flex-start; 
+    padding: 1rem; 
+    }
+    
     .image img {
-      justify-content: flex-start;
       max-width: 90%;
-      height: 50%;
+      height: auto; 
       border-radius: 10px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     }
+        
 
     /* ======= Section 3 : intro Text ======= */
     .intro-text {
