--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     .hero h1 {
       text-align: left;
       font-size: 3rem;
-      margin-bottom: 0rem;
     }
     .hero h3 {
       text-align: left;
@@ -48,8 +47,8 @@
     
     .image img {
       max-width: 90%;
-      height: auto; 
-      border-radius: 10px;
+      height: 50%; 
+      border-radius: 0px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     }
         
@@ -59,7 +58,7 @@
       max-width: 800px;
       font-size: 1.2rem;
       line-height: 1.6;
-      text-align: justify;
+      text-align: left;
     }
 
     /* ======= Section 4 : Scrollytelling ======= */
