--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
     }
 
     /* ======= Section 1 : Title ======= */
+    .hero {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start; 
+      text-align: left;      
+      padding: 2rem;         
+    }
+    
     .hero h1 {
       text-align: left;
       font-size: 3rem;
