--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     }
     
     .hero-content .image img {
-      max-width: 200px;      
-      height: auto;
+      max-width: 400px;      
+      height: 200px;
       border-radius: 0px;
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
     }
