--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
     .hero-content .image img {
       max-width: 400px;      
-      height: 200px;
+      height: auto;
       border-radius: 0px;
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
     }
