--- a/index.html
+++ b/index.html
@@ -1,183 +1,225 @@
-<!doctype html>
+je veux :
+- changer la marge de la page
+- aligner les titres sous titres et textes a gauche , en plus changer la police
+- ajouter des éléments en bas de la section scrolly comme une figure flourish suivi de texte (pas de scrolly ici)
+- Ajouter des images encore (montre moi seulement comment le faire je me chargerai de mettre le code) 
+- Avoir une barre en haut de page qui contient l'onglet "Project" cliquable qui mène vers ce contenu (c'est à dire cette page) et l'onglet "About" cliquable qui mène vers un texte about 
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Scrollytelling</title>
-<style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Air Pollution in Africa</title>
+  <style>
+    body {
+      margin: 2;
+      font-family: Poppins, Arial, sans-serif;
+      background: #f5f5f5;
+      color: #111;
+      overflow-x: hidden;
+    }
 
-  html, body {
-    margin: 0;
-    padding: 0;
-    font-family: Poppins, Arial, sans-serif;
-    background: #000;
-    color: #fff;
-    overflow-x: hidden;
-  }
-  
-  .intro {
-  min-height: 100vh; 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 2rem;
-  background: #000;
-  color: #fff;
-}
+    /* ======= Section containers ======= */
+    section {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: left;
+      padding: 3rem 1rem;
+      box-sizing: border-box;
+    }
 
+    /* ======= Section 1 : Title ======= */
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 0rem;
+    }
+    .hero h3 {
+      font-weight: normal;
+      color: #555;
+      margin-top: 0;
+    }
 
-  .outro {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 2rem;
-    background: #000;
-    color: #fff;
-    font-size: 1.2rem;
-  }
+    /* ======= Section 2 : Image ======= */
+    .image img {
+      max-width: 50%;
+      height: auto;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    }
 
-  .visuals {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: black;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+    /* ======= Section 3 : intro Text ======= */
+    .intro-text {
+      max-width: 800px;
+      font-size: 1.2rem;
+      line-height: 1.6;
+      text-align: justify;
+    }
 
-  .visuals iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
-    opacity: 0;
-    transition: opacity 0.8s ease-in-out;
-  }
+    /* ======= Section 4 : Scrollytelling ======= */
+    .scrolly-section {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      margin: 4rem 0;
+    }
 
-  .visuals iframe.active {
-    opacity: 1;
-    z-index: 2;
-  }
+    .visuals {
+      position: sticky;
+      top: 0;
+      width: 100%;
+      height: 100vh;
+      background: #000;
+      z-index: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
+    .visuals iframe {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border: none;
+      opacity: 0;
+      transition: opacity 0.8s ease-in-out;
+    }
 
-  .scrolling-text {
-    position: relative;
-    z-index: 3;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: black;
-    
-  }
+    .visuals iframe.active {
+      opacity: 1;
+      z-index: 2;
+    }
 
-  .step {
-    min-height: 100vh;
-    max-width: 700px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 2rem;
-    box-sizing: border-box;
-    text-align: center;
-    color: black;
-    opacity: 0.6;
-    transition: opacity 0.3s ease, transform 0.3s ease;
-  }
+    .scrolling-text {
+      position: relative;
+      z-index: 3;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: white;
+      margin-top: 100vh;
+    }
 
-  .step.is-active {
-    opacity: 1;
-    transform: scale(1.05);
-  }
+    .step {
+      min-height: 100vh;
+      max-width: 700px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 2rem;
+      box-sizing: border-box;
+      text-align: center;
+      opacity: 0.6;
+      transition: opacity 0.3s ease, transform 0.3s ease;
+    }
 
-  .step h3 {
-    font-size: 2.2rem;
-    margin-bottom: 1rem;
-  }
-  .step p {
-    font-size: 1.3rem;
-    line-height: 1.6;
-  }
-</style>
+    .step.is-active {
+      opacity: 1;
+      transform: scale(1.05);
+    }
+
+    /* ======= Section 5 : Conclusion ======= */
+    .outro {
+      font-size: 1.3rem;
+      max-width: 800px;
+      line-height: 1.6;
+      text-align: center;
+      padding: 4rem 1rem;
+    }
+  </style>
 </head>
 <body>
 
-<header class="intro">
-  <h1>Breathing in Life or Death; A look at Africa's Air Quality</h1>
-  <p></p>
-</header>
+  <!-- Section 1 : Title -->
+  <section class="hero">
+    <h1>Breathing in Life or Death; A look at Africa's Air Quality</h1>
+    <h3>Air pollution and climate change are a deadly duo for Africa.</h3>
+  </section>
 
-<div class="visuals">
-  <iframe id="vis-1" src="https://public.flourish.studio/visualisation/24728120/embed"></iframe>
-  <iframe id="vis-2" src="https://public.flourish.studio/visualisation/24838022/embed"></iframe>
-  <iframe id="vis-3" src="https://public.flourish.studio/visualisation/24838425/embed"></iframe>
-</div>
+  <!-- Section 2 : Image -->
+  <section class="image">
+    <img src="https://images.pexels.com/photos/10666664/pexels-photo-10666664.jpeg?auto=compress&cs=tinysrgb&w=1200" alt="Air pollution image">
+  </section>
 
-<div class="scrolling-text">
-  <div class="step" data-target="vis-1">
-    <h3>Exposure pollution</h3>
-    <p>Exposure to PM2 varies across the continent.</p>
-  </div>
-  <div class="step" data-target="vis-2">
-    <h3>Household pollution</h3>
-    <p>Indoor air pollution death rates are high in the West, Central and East.</p>
-  </div>
-  <div class="step" data-target="vis-3">
-    <h3>Ambient pollution</h3>
-    <p>Northern and Southern Africa record the highest outdoor air pollution death rates.</p>
-  </div>
-</div>
+  <!-- Section 3 : Intro Text-->
+  <section class="intro-text">
+    <p>
+      Pollutants from vehicles, factories, and everyday lifestyles negatively impact health, affecting respiratory and cardiovascular systems. The Africa Clean Air Programme, endorsed by the African Union Commission, notes that super pollutants, and their impact on air quality, can poison communities and accelerate the worst effects of climate change, putting both health and economies under stress.  It continues to note that across the continent, approximately 1 million people die prematurely per year due to the health impacts of poor air quality.
+    </p>
+    <p>
+      sensors.AFRICA records that the leading pollutant is particulate matter (PM), a common proxy indicator for air pollution, with strong evidence for the negative health impacts associated with exposure to it. PM is composed of sulfate, nitrates, ammonia, sodium chloride, black carbon, mineral dust and water droplets. Of note is Indoor (household) air pollution and outdoor (ambient) air pollution.
+    </p>
+    <p>
+      According to the World Health Organisation, the combined effects of ambient air pollution and household air pollution are associated with 6.7 million premature deaths annually. Ambient air pollution is estimated to have caused 4.2 million premature deaths worldwide while household air pollution was responsible for an estimated 3.2 million deaths per year.
+    </p>
+  </section>
 
-<footer class="outro">
-  <h2>Conclusion</h2>
-  <p></p>
-</footer>
+  <!-- Section 4 : Scrollytelling -->
+  <section class="scrolly-section">
+    <div class="visuals">
+      <iframe id="vis-1" src="https://public.flourish.studio/visualisation/24728120/embed"></iframe>
+      <iframe id="vis-2" src="https://public.flourish.studio/visualisation/24838022/embed"></iframe>
+      <iframe id="vis-3" src="https://public.flourish.studio/visualisation/24838425/embed"></iframe>
+    </div>
 
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-  const steps = document.querySelectorAll('.step');
-  const iframes = document.querySelectorAll('.visuals iframe');
+    <div class="scrolling-text">
+      <div class="step" data-target="vis-1">
+        <h3>Exposure pollution</h3>
+        <p>Exposure to PM2 varies across the continent.</p>
+      </div>
+      <div class="step" data-target="vis-2">
+        <h3>Household pollution</h3>
+        <p>Indoor air pollution death rates are high in the West, Central and East.</p>
+      </div>
+      <div class="step" data-target="vis-3">
+        <h3>Ambient pollution</h3>
+        <p>Northern and Southern Africa record the highest outdoor air pollution death rates.</p>
+      </div>
+    </div>
+  </section>
 
-  function setStepHeights() {
-    const vh = window.innerHeight;
-    steps.forEach(step => step.style.minHeight = vh + 'px');
-  }
-  setStepHeights();
-  window.addEventListener('resize', setStepHeights);
+  <!-- Section 5 : Conclusion -->
+  <section class="outro">
+    <h2>Conclusion</h2>
+    <p>
+      These graphics highlight the urgent need to implement public health policies adapted to the most affected regions.
+    </p>
+  </section>
 
-  const observer = new IntersectionObserver((entries) => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        steps.forEach(s => s.classList.remove('is-active'));
-        entry.target.classList.add('is-active');
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const steps = document.querySelectorAll('.step');
+      const iframes = document.querySelectorAll('.visuals iframe');
 
-        const targetId = entry.target.dataset.target;
-        iframes.forEach(f => f.classList.remove('active'));
-        const activeFrame = document.getElementById(targetId);
-        if (activeFrame) activeFrame.classList.add('active');
+      function setStepHeights() {
+        const vh = window.innerHeight;
+        steps.forEach(step => step.style.minHeight = vh + 'px');
       }
+      setStepHeights();
+      window.addEventListener('resize', setStepHeights);
+
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            steps.forEach(s => s.classList.remove('is-active'));
+            entry.target.classList.add('is-active');
+            const targetId = entry.target.dataset.target;
+            iframes.forEach(f => f.classList.remove('active'));
+            const activeFrame = document.getElementById(targetId);
+            if (activeFrame) activeFrame.classList.add('active');
+          }
+        });
+      }, { threshold: 0.6 });
+
+      steps.forEach(step => observer.observe(step));
+      iframes[0].classList.add('active');
     });
-  }, { threshold: 0.6 });
-
-  steps.forEach(step => observer.observe(step));
-
-  // Activer le premier iframe par défaut
-  iframes[0].classList.add('active');
-});
-</script>
+  </script>
 
 </body>
 </html>
-	
