--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       display: flex;
       flex-direction: column; /* text then image */
       align-items: flex-start; /* align left */
-      gap: 1rem; /* space between elements */
+      gap: 4rem; /* space between elements */
     }
     
     .hero h1 {
       font-size: 3rem;
-      margin-bottom: 0.5rem;
+      margin-bottom: 2rem;
       text-align: left;
     }
     
@@ -50,7 +50,7 @@
     .hero .image img {
       max-width: 300%; /* width image */
       height: auto;
-      border-radius: 10px;
+      border-radius: 0px;
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
     }
 
@@ -148,7 +148,7 @@
         <h3>Air pollution and climate change are a deadly duo for Africa.</h3>
       </div>
       <div class="image">
-        <img src="https://images.pexels.com/photos/10666664/pexels-photo-10666664.jpeg?auto=compress&cs=tinysrgb&w=1200" alt="Air pollution image">
+        <img src="https://p-2d475f4d-952b-49e8-89ec-c70437a32add.apps.webstudio.is/cgi/image/pexels-ouajbir-218782-10666664_(1)_RFyd_cB6Vmpr9Ptfkmoxh.jpg?width=2048&quality=80&format=auto">
       </div>
     </div>
   </section>
