--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Air Pollution in Africa</title>
   <style>
     body {
-      margin: 2;
+      margin: 30px;
       font-family: Poppins, Arial, sans-serif;
-      background: #f5f5f5;
+      background: #D3D3D3;
       color: #111;
       overflow-x: hidden;
     }
@@ -31,7 +31,7 @@
       display: flex;
       flex-direction: column; /* text then image */
       align-items: flex-start; /* align left */
-      gap: 4rem; /* space between elements */
+      gap: 6rem; /* space between elements */
     }
     
     .hero h1 {
@@ -148,7 +148,7 @@
         <h3>Air pollution and climate change are a deadly duo for Africa.</h3>
       </div>
       <div class="image">
-        <img src="https://p-2d475f4d-952b-49e8-89ec-c70437a32add.apps.webstudio.is/cgi/image/pexels-ouajbir-218782-10666664_(1)_RFyd_cB6Vmpr9Ptfkmoxh.jpg?width=2048&quality=80&format=auto">
+        <img src="https://images.pexels.com/photos/10666664/pexels-photo-10666664.jpeg">
       </div>
     </div>
   </section>
