--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <title>Air Pollution in Africa</title>
   <style>
     body {
-      margin: 30px;
+      margin-left: 2rem;
+      margin-rigth: 2rem;
+      margin-bottom: 2rem;
+      margin-top: 2rem;
       font-family: Poppins, Arial, sans-serif;
       background: #D3D3D3;
       color: #111;
