--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     }
     
     .hero .image img {
-      max-width: 20%; /* width image */
+      max-width: 100%; /* width image */
       height: auto;
       border-radius: 0px;
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
@@ -64,7 +64,7 @@
       max-width: 800px;
       font-size: 1.2rem;
       line-height: 1.6;
-      text-align: justify;
+      text-align: left;
     }
     
   /* ======= Section 4 : Flourish Chart ======= */
@@ -190,7 +190,7 @@
 
   <section class="flourish-chart1">
   <div class="flourish-figure">
-    <iframe src="https://public.flourish.studio/visualisation/24470534/" width="100%" height="500" frameborder="0"></iframe>
+    <iframe id="vis-0" src="https://public.flourish.studio/visualisation/24470534/embed"></iframe>
   </div>
   <p>In 2019, 99% of the world’s population was living in places where the WHO air quality guidelines levels were not met. Sadly, women and children bear the greatest health burden, with air pollution being one of the greatest environmental risks to child health. 
     Looking at the 2030 Agenda for Sustainable Development Goals (SDGs), Air pollution impacts cut across several of them. SDGs related to air quality are SDG 3.9 focusing on reducing mortality and illness from hazardous chemicals and air pollution; SDG 11.6 aiming to reduce adverse environmental impact of cities, specifically by addressing air quality as well as SDG 7, which focuses on affordable and clean energy.</p>
