--- a/index.html
+++ b/index.html
@@ -69,17 +69,22 @@
     
   /* ======= Section 4 : Flourish Chart ======= */
 
-    .flourish-chart1 {
-      padding: 3rem 1rem;
-      max-width: 800px;
-      margin: 0 auto;
-      text-align: left;
-    }
-    
-    .flourish-chart1 p {
-      margin-top: 1rem;
-      font-size: 1.2rem;
-    }
+  .flourish-section {
+    padding: 3rem 1rem;
+    max-width: 800px;
+    margin: 0 auto;
+    text-align: left;  /* texte aligné à gauche */
+  }
+  
+  .flourish-section .flourish-figure {
+    width: 100%;
+    margin-bottom: 1rem; /* espace entre figure et texte */
+  }
+  
+  .flourish-section p {
+    font-size: 1.2rem;
+    line-height: 1.6;
+  }
 
 
     /* ======= Section 5 : Scrollytelling ======= */
@@ -188,14 +193,14 @@
   
   <!-- Section 4 : Flourish chart -->
 
-  <section class="flourish-chart1">
+  <section class="flourish-section">
   <div class="flourish-figure">
-    <iframe id="vis-0" src="https://public.flourish.studio/visualisation/24470534/embed"></iframe>
+    <iframe id="vis-0" src="https://public.flourish.studio/visualisation/24470534/embed" width="100%" height="500" frameborder="0"></iframe>
   </div>
-  <p>In 2019, 99% of the world’s population was living in places where the WHO air quality guidelines levels were not met. Sadly, women and children bear the greatest health burden, with air pollution being one of the greatest environmental risks to child health. 
+  <p>
+In 2019, 99% of the world’s population was living in places where the WHO air quality guidelines levels were not met. Sadly, women and children bear the greatest health burden, with air pollution being one of the greatest environmental risks to child health. 
     Looking at the 2030 Agenda for Sustainable Development Goals (SDGs), Air pollution impacts cut across several of them. SDGs related to air quality are SDG 3.9 focusing on reducing mortality and illness from hazardous chemicals and air pollution; SDG 11.6 aiming to reduce adverse environmental impact of cities, specifically by addressing air quality as well as SDG 7, which focuses on affordable and clean energy.</p>
 </section>
-
 
   <!-- Section 5 : Scrollytelling -->
   <section class="scrolly-section">
