--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
 
     /* ======= Section 3 : intro Text ======= */
     .intro-text {
-      max-width: 800px;
-      font-size: 1.2rem;
-      line-height: 1.6;
-      text-align: left;
-    }
+    width: 100%;       
+    max-width: none;    
+    font-size: 1.2rem;
+    line-height: 1.6;
+    text-align: left;  
+  }
     
   /* ======= Section 4 : Flourish Chart ======= */
 
@@ -73,12 +74,12 @@
     padding: 3rem 1rem;
     max-width: 800px;
     margin: 0 auto;
-    text-align: left;  /* texte aligné à gauche */
+    text-align: left;  /* align left */
   }
   
   .flourish-section .flourish-figure {
     width: 100%;
-    margin-bottom: 1rem; /* espace entre figure et texte */
+    margin-bottom: 1rem; /* space between figure and text */
   }
   
   .flourish-section p {
