--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
   <section class="flourish-section">
   <div class="flourish-figure">
-    <iframe id="vis-0" src="https://public.flourish.studio/visualisation/24470534/embed" width="100%" height="500" frameborder="0"></iframe>
+    <iframe id="vis-0" src="https://public.flourish.studio/visualisation/24470534/embed"></iframe>
   </div>
   <p>
 In 2019, 99% of the world’s population was living in places where the WHO air quality guidelines levels were not met. Sadly, women and children bear the greatest health burden, with air pollution being one of the greatest environmental risks to child health. 
