--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      color: white;
+      color: black;
       margin-top: 100vh;
     }
 
