--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
       text-align: center;
       opacity: 0.6;
       transition: opacity 0.3s ease, transform 0.3s ease;
+      font-size: 4rem;
     }
 
     .step.is-active {
@@ -170,7 +171,7 @@
       transform: scale(1.05);
     }
 
-    /* ======= Section 5 : Conclusion ======= */
+    /* ======= Section 7 : Conclusion ======= */
     .outro {
       font-size: 1.3rem;
       max-width: 800px;
