--- a/index.html
+++ b/index.html
@@ -171,7 +171,18 @@
       transform: scale(1.05);
     }
 
-    /* ======= Section 7 : Conclusion ======= */
+  /* ======= Section  : Flourish 2  Text ======= */
+
+    .flourish1-text {
+        width: 100%;       
+        max-width: none;    
+        font-size: 1.2rem;
+        line-height: 1.6;
+        text-align: left;  
+      }
+    
+
+    /* ======= Section  : Conclusion ======= */
     .outro {
       font-size: 1.3rem;
       max-width: 800px;
@@ -255,7 +266,24 @@ Looking at the 2030 Agenda for Sustainable Development Goals (SDGs), Air polluti
     </div>
   </section>
 
-  <!-- Section 7 : Conclusion -->
+
+  <!-- Section 7 : Flourish 2 text -->
+
+  <section class="flourish1-text">
+  <h2>AIR QUALITY AND INFRASTRUCTURE </h2>
+  <p>
+   People with lower incomes are more likely to live in areas with higher pollution levels due to various factors creating and perpetuating environmental inequality. Environmental burdens of society, like pollution, are disproportionately borne by marginalised communities. 
+  </p>
+  <p>
+    The 2018 study Nature: Air pollution and infant mortality in Africa by Heft-Neal et al., suggests that current estimates for the death toll of air pollution might be too low. With two datasets: one based on household surveys, which detail the time and place of nearly one million births across sub-Saharan Africa, and another detailing spatial distribution of exposure to PM2.5 based on satellite data, they estimate the impact of air pollution on mortality rates among infants in Africa. 
+  </p>
+  <p>
+    Findings show that a 10μg/m³ increase in PM2.5 concentration is associated with a 9% rise in infant mortality. This suggests that PM2.5 exposure is responsible for 22% of infant deaths in the studied countries; this means 449,000 infant deaths in 2015 alone: an extremely high death toll, suggesting the exposure-response relationship in the select African countries is steeper than previous studies.
+  </p>
+</section>
+
+
+  <!-- Section  : Conclusion -->
   <section class="outro">
     <h2>Conclusion</h2>
     <p>
