--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     }
     
     .hero .image img {
-      max-width: 80%; /* width image */
-      height: auto;
+      max-width: 100%; /* width image */
+      height: 400px;
       border-radius: 0px;
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
     }
