--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
         line-height: 1.6;
         text-align: left;  
       }
+
+    .left-title {
+    text-align: left;
+    }
     
 
     /* ======= Section  : Conclusion ======= */
@@ -270,7 +274,7 @@ Looking at the 2030 Agenda for Sustainable Development Goals (SDGs), Air polluti
   <!-- Section 7 : Flourish 2 text -->
 
   <section class="flourish1-text">
-  <h2>AIR QUALITY AND INFRASTRUCTURE </h2>
+  <h2 class= "left-title"> AIR QUALITY AND INFRASTRUCTURE </h2>
   <p>
    People with lower incomes are more likely to live in areas with higher pollution levels due to various factors creating and perpetuating environmental inequality. Environmental burdens of society, like pollution, are disproportionately borne by marginalised communities. 
   </p>
