--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
     }
     
     .hero .image img {
-      max-width: 150%; /* width image */
-      height: 700px;
-      border-radius: 0px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    width: 100%;       
+    height: 700px;     
+    object-fit: cover;  
+    border-radius: 0px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    display: block;    
     }
 
 
