--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     .hero .image img {
     width: 100%;       
     height: 700px;     
-    object-fit: contain;  
+    object-fit: fill;  
     border-radius: 0px;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
     display: block;    
