--- a/index.html
+++ b/index.html
@@ -323,6 +323,20 @@ Looking at the 2030 Agenda for Sustainable Development Goals (SDGs), Air polluti
     <iframe id="vis-0" src="https://public.flourish.studio/visualisation/24679794/embed"></iframe>
   </div>
 </section>
+
+
+<section class="flourish3-text">
+  <h3> Mathare: Where Indoor and Outdoor Collide. </h3>
+  <p>
+  <p> In Mathare, Nairobi’s most densely populated sub-county, the line between outdoor and indoor pollution is almost invisible. Mathare packs <strong>206,564 people</strong> into just <strong>3 km²</strong> according to the KNBS Census, 2019; nearly <strong>69,000 residents per km²</strong>. 
+  </p>
+  <p>
+    The 2018 study Nature: Air pollution and infant mortality in Africa by Heft-Neal et al., suggests that current estimates for the death toll of air pollution might be too low. With two datasets: one based on household surveys, which detail the time and place of nearly one million births across sub-Saharan Africa, and another detailing spatial distribution of exposure to PM2.5 based on satellite data, they estimate the impact of air pollution on mortality rates among infants in Africa. 
+  </p>
+  <p>
+    Findings show that a 10μg/m³ increase in PM2.5 concentration is associated with a 9% rise in infant mortality. This suggests that PM2.5 exposure is responsible for 22% of infant deaths in the studied countries; this means 449,000 infant deaths in 2015 alone: an extremely high death toll, suggesting the exposure-response relationship in the select African countries is steeper than previous studies.
+  </p>
+</section>
   
   <!-- Section  : Conclusion -->
   <section class="outro">
