--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Air Pollution in Africa</title>
   <style>
     body {
-      margin-left: 4rem;
-      margin-rigth: 4rem;
+      margin-left: 6rem;
+      margin-rigth: 6rem;
       margin-bottom: 4rem;
       margin-top: 4rem;
-      font-family: Poppins, Arial, sans-serif;
+      font-family: "Poppins", Arial, sans-serif;
       background: #D3D3D3;
       color: #111;
       overflow-x: hidden;
