--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
      /* ======= Section 5 : Flourish 1 Text ======= */
       
-    .flourish-text {
+    .flourish1-text {
         width: 100%;       
         max-width: none;    
         font-size: 1.2rem;
