--- a/index.html
+++ b/index.html
@@ -183,10 +183,6 @@
         text-align: left;  
       }
 
-    .left-title {
-    text-align: left;
-    }
-
     /* ======= Section 3 : Flourish 3 Chart ======= */
 
     .flourish3-section {
@@ -336,6 +332,17 @@ Looking at the 2030 Agenda for Sustainable Development Goals (SDGs), Air polluti
   <p>
     Findings show that a 10μg/m³ increase in PM2.5 concentration is associated with a 9% rise in infant mortality. This suggests that PM2.5 exposure is responsible for 22% of infant deaths in the studied countries; this means 449,000 infant deaths in 2015 alone: an extremely high death toll, suggesting the exposure-response relationship in the select African countries is steeper than previous studies.
   </p>
+
+<p>Smoke from household fuels, waste burning, and the settlement’s dense construction make the air outside as hazardous as the air inside: smoke, crowding, and trapped pollution.</p>
+
+<h3>Sensors tell the story</h3>
+
+<p>From 2019 to 2024, data from Mathare’s air quality sensors show a steady rise in pollution. Fine particulate matter (PM₂.₅) reached levels nearly <strong>eight times</strong> higher than the WHO’s safe annual limit of <strong>5 µg/m³</strong>, while coarse particles (PM₁₀)  more than doubled the recommended <strong>15 µg/m³</strong>.</p>
+
+<p>Every year, the air has grown more hazardous to breathe.</p>
+
+
+  
 </section>
   
   <!-- Section  : Conclusion -->
