--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin-left: 6rem;
-      margin-rigth: 6rem;
+      margin-right: 6rem;
       margin-bottom: 4rem;
       margin-top: 4rem;
       font-family: "Poppins", Arial, sans-serif;
