--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin-bottom: 4rem;
       margin-top: 4rem;
       font-family: "Poppins", Arial, sans-serif;
-      background: #D3D3D3;
+      background: #F5F5F5;
       color: #111;
       overflow-x: hidden;
     }
@@ -432,7 +432,7 @@ Looking at the 2030 Agenda for Sustainable Development Goals (SDGs), Air polluti
    <!-- Section 11 : Image 1 (satellite) -->
 
   <section class="image1-section">
-  <img src="https://p-2d475f4d-952b-49e8-89ec-c70437a32add.apps.webstudio.is/cgi/image/Open_building_Mathare__iqAmbk8HvzZxgtDd-joQ.png?width=3840&quality=80&format=auto">
+  <img src="https://p-2d475f4d-952b-49e8-89ec-c70437a32add.apps.webstudio.is/cgi/image/Open_building_Mathare__iqAmbk8HvzZxgtDd-joQ.png">
   </section>
 
 
