--- a/index.html
+++ b/index.html
@@ -126,7 +126,6 @@
       display: flex;
       flex-direction: column;
       margin: 4rem 0;
-      padding: 0 6rem;
     }
 
     .visuals {
@@ -145,6 +144,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
+      border: none;
       opacity: 0;
       transition: opacity 0.8s ease-in-out;
     }
@@ -160,30 +160,31 @@
       width: 100%;
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: center;
       color: black;
       margin-top: 100vh;
     }
 
     .step {
       min-height: 100vh;
-      max-width: 800px;
-      margin: 0;
+      max-width: 700px;
+      margin: 0 auto;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      padding: 2rem 0;
+      padding: 2rem;
       box-sizing: border-box;
-      text-align: left;
+      text-align: center;
       opacity: 0.6;
       transition: opacity 0.3s ease, transform 0.3s ease;
-      font-size: 1.5rem;
+      font-size: 2rem;
     }
 
     .step.is-active {
       opacity: 1;
       transform: scale(1.05);
     }
+
 
     /* ======= Images ======= */
     .image1-section img {
