--- a/index.html
+++ b/index.html
@@ -122,40 +122,38 @@
 
     /* ======= Scrollytelling ======= */
     .scrolly-section {
-    display: flex;
-    flex-direction: column;
-    margin: 4rem 0;
-      }
-    
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      margin: 4rem 0;
+    }
+
     .visuals {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: black;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+      position: sticky;
+      top: 0;
+      width: 100%;
+      height: 100vh;
+      /*background: #000;*/
+      z-index: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
     .visuals iframe {
       position: absolute;
-      top: 0;
-      left: 0;
       width: 100%;
       height: 100%;
       border: none;
       opacity: 0;
       transition: opacity 0.8s ease-in-out;
     }
-  
+
     .visuals iframe.active {
       opacity: 1;
       z-index: 2;
     }
-  
+
     .scrolling-text {
       position: relative;
       z-index: 3;
@@ -163,8 +161,10 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      color: black;
+      margin-top: 100vh;
     }
-  
+
     .step {
       min-height: 100vh;
       max-width: 700px;
@@ -175,11 +175,11 @@
       padding: 2rem;
       box-sizing: border-box;
       text-align: center;
-      color: black;
       opacity: 0.6;
       transition: opacity 0.3s ease, transform 0.3s ease;
+      font-size: 2rem;
     }
-  
+
     .step.is-active {
       opacity: 1;
       transform: scale(1.05);
