--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
       font-size: 2rem;
     }
 
-    .step.is-active {
+    /*.step.is-active {
       opacity: 1;
       transform: scale(1.05);
-    }
+    }*/
 
   /* ======= Section 6 : Flourish 2 Text ======= */
 
