--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     }
 
     .visuals {
-      position: sticky;
+      position: fixed;
       top: 0;
       width: 100%;
       height: 100vh;
@@ -339,7 +339,7 @@ Looking at the 2030 Agenda for Sustainable Development Goals (SDGs), Air polluti
 </section>
 
 
-  <!-- Section 5 : Scrollytelling -->
+<!-- Section 5 : Scrollytelling -->
   <section class="scrolly-section">
     <div class="visuals">
       <iframe id="vis-1" src="https://public.flourish.studio/visualisation/24728120/embed"></iframe>
