--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     }
 
     .visuals {
-      position: absolute;
+      position: sticky;
       top: 0;
       width: 100%;
       height: 100vh;
